fix size on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,6 @@
 }
 html {
 	min-height: calc(100% + env(safe-area-inset-top));
-	padding: env(safe-area-inset-top) env(safe-area-inset-right)
-		env(safe-area-inset-bottom) env(safe-area-inset-left);
+	padding: env(safe-area-inset-top) env(safe-area-inset-right) 0
+		env(safe-area-inset-left);
 }
